--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(main main.cpp)
 add_executable(loop loop.cpp)
 add_executable(selection selection.cpp)
 add_executable(function function.cpp)
+add_executable(reference reference.cpp)
+add_executable(pointer pointer.cpp)
+add_executable(array array.cpp)
