--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(function function.cpp)
 add_executable(reference reference.cpp)
 add_executable(pointer pointer.cpp)
 add_executable(array array.cpp)
+add_executable(encapsulation Encapsulation.cpp)
