20240609 template_class bubbleSort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(reference reference.cpp)
 add_executable(pointer pointer.cpp)
 add_executable(array array.cpp)
 add_executable(encapsulation Encapsulation.cpp)
+add_executable(template_class template_class.cpp)
