--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(pointer pointer.cpp)
 add_executable(array array.cpp)
 add_executable(encapsulation Encapsulation.cpp)
 add_executable(template_class template_class.cpp)
+add_executable(inheritance inheritance.cpp)
