--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(array array.cpp)
 add_executable(encapsulation Encapsulation.cpp)
 add_executable(template_class template_class.cpp)
 add_executable(inheritance inheritance.cpp)
+add_executable(polymorphism polymorphism.cpp)
