--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(encapsulation Encapsulation.cpp)
 add_executable(template_class template_class.cpp)
 add_executable(inheritance inheritance.cpp)
 add_executable(polymorphism polymorphism.cpp)
+add_executable(multi_virtual multi_virtual_inheritance.cpp)
